# eman2

./: .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  appveyor.yml  circle.yml  divs.out  divs_all.out  indent_diffs.txt  qt5.diff  qt5_move.sh  sed_cmd
ci_support/: Jenkinsfile  build_no_recipe.sh  build_recipe.sh  setup_conda.sh
cmake/: FindPytest.cmake
del/eman_test/: test_script.sh
doc/modular_class_html/: docgen.py
eman_fixer/: __main__.py  fix_eman_div.py
eman_test/: .eman2log.txt  test_eman.py  test_script.sh
examples/: UnitTestGetComplexAt2D.py  UnitTestGetComplexAt3D.py  alignbystars.py  alignnrg.py  average.py  avsub.py  breakbrick.py  build_ali_lst.py  cmpspeedtest.py  comparepairs.py  compute_deconvolution.py  convnet_pickparticle.py  crystal_index.py  ctf_first_zero.py  ctf_test.py  cudaspeedtest.py  ddd_simulation.py  denoiseautoencoder.py  displaydemo.py  drawshape.py  e2alignmenttest.py  e2aligntest.py  e2boxer_movie.py  e2boxinfo_rescale.py  e2convnet_classifyptcls.py  e2ctf2emx.py  e2cylinder.py  e2ddd_powspec.py  e2ddd_ptclaligner.py  e2extractctf.py  e2extractequalorient.py  e2fftsynth.py  e2figureplot.py  e2fixheader.py  e2framestats.py  e2helixcoords2boxes.py  e2maskimod.py  e2melonball.py  e2moviealigner.py  e2moviealigner2.py  (+98 more)
hdf_test/: readata_mpi.py
libEM/: emdata_io.cpp  emdata_io.h  geometry.h  glutil.cpp  glutil.h  mrcio.cpp  mrcio.h  util.h
libEM/cuda/: CMakeLists.txt  dot.cu  dot.h  libpyCuda.cu  main.cu
libpyEM/: Anneal.py  EMAN2.py  EMAN2PAR.py  EMAN2_utils.py  EMAN2db.py  EMAN2jsondb.py  EMAN2star.py  Simplex.py  libpyEMData2.cpp  mpi_eman.py
programs/: CMakeLists.txt  e22.py  e2RCTboxer.py  e2_real.py  e2a2d_align.py  e2a2d_average.py  e2a2d_stat.py  e2ali2img.py  e2align2d.py  e2align3d.py  e2avg_ffts.py  e2basis.py  e2bdb.py  e2boxadjust.py  e2boxer.py  e2boxer_old.py  e2buildsets.py  e2buildstacks.py  e2c11.cpp  e2classaverage.py  e2classes_denovo.py  e2classesbyref.py  e2classextract.py  e2classify.py  e2classifykmeans.py  e2classifyligand.py  e2classifytree.py  e2classptcl.py  e2classvsproj.py  e2cmmtomrc.py  e2cmpxplor.py  e2ctf.py  e2ctf2eman1.py  e2ctf_auto.py  e2ctffind3util.py  e2ctfsim.py  e2ddd_movie.py  e2ddd_particles.py  e2ddd_refs.py  e2display.py  (+130 more)
pyemtbx/: box.py  boxertools.py
recipes/eman/: bld.bat  (+2 more)
sparx/: __init__.py
tests/: run_prog_tests.sh  run_tests.sh  run_tests_from_binary.sh  test_EMAN2DIR.py  test_binary_installation.bat  test_binary_installation.sh
(+133 files in other folders)
